--- a/KMZI.csproj
+++ b/KMZI.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DES.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DES.Designer.cs">
+      <DependentUpon>DES.cs</DependentUpon>
+    </Compile>
     <Compile Include="Freq.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +64,12 @@
     </Compile>
     <Compile Include="Gamma.Designer.cs">
       <DependentUpon>Gamma.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GOST.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GOST.Designer.cs">
+      <DependentUpon>GOST.cs</DependentUpon>
     </Compile>
     <Compile Include="Hill.cs">
       <SubType>Form</SubType>
@@ -157,11 +169,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DES.resx">
+      <DependentUpon>DES.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Freq.resx">
       <DependentUpon>Freq.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Gamma.resx">
       <DependentUpon>Gamma.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GOST.resx">
+      <DependentUpon>GOST.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Hill.resx">
       <DependentUpon>Hill.cs</DependentUpon>
